syntax = "proto3";

option csharp_namespace = "grpcProtoFiles";

package circusShow;

service CircusShowService {
  rpc createCircusShow(CreateCircusShowRequest) returns (CreateCircusShowResponse);
  rpc getCircusShowById(CircusShowByIdRequest) returns (CircusShowByIdResponse);
  rpc getAllCircusShows(getAllCircusShowsRequest) returns (GetAllCircusShowResponse);
  rpc getAllCircusShowsByLocation(getAllCircusShowsByLocationRequest) returns (getAllCircusShowsByLocationResponse);
  //TODO
  //rpc deleteCircusShow(CircusShowByIdRequest) returns (CreateCircusShowResponse);
  rpc DeleteCircusShow(Integer) returns (DeleteCircusShowResponse);

}
message CreateCircusShowRequest{
  CircusShow circusShow = 1;
}

message CreateCircusShowResponse{
  CircusShow circusShow = 1;
}

message CircusShowByIdRequest{
  int32 id = 1;
}
message Integer{
  int32 id=1;
}

message CircusShowByIdResponse{
  CircusShow circusShow = 1;
}
message DeleteCircusShowResponse{
  CircusShow circusShow = 1;
}
message getAllCircusShowsRequest{

}

message GetAllCircusShowResponse{
  repeated CircusShow circusShow = 1;
}

message getAllCircusShowsByLocationRequest{
  string location= 1;
}
message getAllCircusShowsByLocationResponse
{
  repeated CircusShow circusShow = 1;
}

message CircusShow{
  int32 id = 1;
  string title =2;
  string description = 3;
  double price = 4;
  string duration =5;
  string startTime =6;
  string endTime =7;
  double totalTicketsAvailable= 8;
  repeated string locations = 9;




}

